# LogMe

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CookieCutterStarter.md  README.md  docker-compose.docs.yml  manage.py  pyproject.toml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
logme/: conftest.py
logme/connections/: apps.py  forms.py  models.py  urls.py  utilities.py  views.py
logme/connections/migrations/: 0001_initial.py  0002_alter_connection_options_and_more.py  0003_alter_connection_identity_file_and_more.py  0004_connection_slug.py  0005_alter_connection_name.py  0006_alter_connection_identity_file_and_more.py
logme/connections/tests/: test_models.py
logme/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
logme/core/: apps.py  views.py
logme/projects/: apps.py  filters.py  forms.py
logme/projects/management/commands/: sync.py
logme/projects/migrations/: 0001_initial.py  0002_alter_logentry_level_remove_project_levels_and_more.py
logme/projects/models/: __init__.py  fields.py  project.py
logme/projects/tests/: factories.py  test_models.py  test_urls.py
logme/static/: package-lock.json  package.json  tailwind.config.js
logme/static/css/: input.css  styles.css
logme/templates/: base.html
logme/templates/components/: _grid.html  _nav.html  grid_card.html  notification.html
logme/templates/connections/: form.html  list.html
logme/templates/pages/: home.html
logme/templates/pages/projects/: create.html  detail.html  list.html
logme/templates/projects/: _log_list.html  create.html  list.html  log_detail.html
logme/templates/svgs/: close.html  edit.html  spinner.html
logme/track/: apps.py  filters.py  forms.py  managers.py  models.py  urls.py  views.py
logme/track/management/commands/: sync.py
logme/track/migrations/: 0001_initial.py  0002_loglevel_project_levels.py  0003_project_sync_command.py  0004_alter_logentry_label_alter_project_sync_command.py  0005_logentry_level_logentry_summary_logentry_timestamp_and_more.py  0006_remove_logentry_content.py  0007_remove_logentry_label_logentry_title.py  0008_alter_logentry_options_and_more.py  0009_project_pattern.py  0010_alter_logentry_options_and_more.py  0011_alter_logentry_options.py  0012_rename_log_type_project_framework.py  0013_logentry_is_read_alter_project_pattern_and_more.py  0014_alter_project_pattern.py  0015_alter_project_pattern.py
logme/track/templatetags/: track_extras.py
logme/track/tests/: factories.py  test_commands.py  test_models.py  test_urls.py
logme/users/: adapters.py  apps.py  models.py  views.py
logme/users/migrations/: 0001_initial.py
logme/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
requirements/: base.txt  local.txt
